{
    "name": "Controls",
    "maps": [
        {
            "name": "Player",
            "id": "b72fe082-f6e4-4f1a-ba3f-ed98637501f3",
            "actions": [
                {
                    "name": "Moving",
                    "type": "Value",
                    "id": "fc93c1eb-b426-4b9b-b4e4-05f97358a90a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseMove",
                    "type": "Value",
                    "id": "2fba4a88-86a2-4224-9d37-e730fbd48e8c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "KeyboardMove",
                    "type": "Value",
                    "id": "917e3ba3-c73f-4e40-9c3c-e7e98c2c0088",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "EyeMove",
                    "type": "Value",
                    "id": "7dc0cb2f-ada0-4d79-a2af-2180cc26c532",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "d6922273-1e38-4ea4-947b-41dae9e2457c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "KeyboardClick",
                    "type": "Button",
                    "id": "625a1403-df69-4cec-8ebd-2657c191f74f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "55fd573d-18cc-4294-9990-de1d0e3e4675",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8372cefa-f70c-45cf-85f2-a02df866c17b",
                    "path": "<TrackedDevice>/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62606483-e8fa-41ff-b805-d7ef62aa8170",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7ac72fc-2d9e-46fe-940a-525001d7f399",
                    "path": "<TrackedDevice>/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EyeMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WAD",
                    "id": "486ac50c-7813-4d90-b714-fd46e7dda52c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "18e732ca-88c8-4647-89b3-3fec518d5f77",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9cfc1575-b3eb-460c-8a4e-ea1cfc6db957",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5e1dd60e-8c92-46ca-ace3-f66db5c60ee5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3aab05ad-a2e5-4b2f-9f0d-c557f5da6fa6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f07acee3-9f70-497e-a0ec-da8eab0833ee",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7127ffc5-0749-4b18-ad81-7bcb8c6a4918",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}